--- a/dev/fpl_data.ipynb
+++ b/dev/fpl_data.ipynb
@@ -37,7 +37,7 @@
     {
      "data": {
       "text/plain": [
-       "'2022-08-03'"
+       "'2022-12-04'"
       ]
      },
      "execution_count": 2,
@@ -111,28 +111,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import aiohttp\n",
+    "from nest_asyncio import asyncio\n",
+    "from fpl import FPL\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "players = pd.read_csv('../archive/players_fifa23.csv')\n",
+    "players = players[['Name', 'FullName', 'Club']]\n",
+    "\n",
+    "teams = pd.read_csv('../archive/teams_fifa23.csv')\n",
+    "teams = teams[['Name', 'League', 'LeagueId']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pl_teams = teams[teams['LeagueId'] == 13]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pl_players = pd.merge(players, pl_teams, how='inner', left_on='Club', right_on='Name')\n",
+    "pl_players = pl_players.drop(['Name_y', 'LeagueId'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pl_players.rename(columns={'Name_x':'Name'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pl_players.sort_values(by=['Club'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Response [200]>\n",
-      "chance_of_playing_next_round             NaN\n",
-      "chance_of_playing_this_round            None\n",
-      "code                                   58822\n",
-      "cost_change_event                          0\n",
-      "cost_change_event_fall                     0\n",
-      "                                       ...  \n",
-      "corners_and_indirect_freekicks_text         \n",
-      "direct_freekicks_order                     3\n",
-      "direct_freekicks_text                       \n",
-      "penalties_order                          NaN\n",
-      "penalties_text                              \n",
-      "Name: 0, Length: 67, dtype: object\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -154,71 +197,47 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>web_name</th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>second_name</th>\n",
-       "      <th>team</th>\n",
-       "      <th>element_type</th>\n",
-       "      <th>full_name</th>\n",
-       "      <th>team_name</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>FullName</th>\n",
+       "      <th>Club</th>\n",
+       "      <th>League</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Cédric</td>\n",
-       "      <td>Cédric</td>\n",
-       "      <td>Alves Soares</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Cédric Alves Soares</td>\n",
-       "      <td>Arsenal</td>\n",
+       "      <th>433</th>\n",
+       "      <td>M. Tavernier</td>\n",
+       "      <td>Marcus Tavernier</td>\n",
+       "      <td>AFC Bournemouth</td>\n",
+       "      <td>English Premier League (1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Xhaka</td>\n",
-       "      <td>Granit</td>\n",
-       "      <td>Xhaka</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Granit Xhaka</td>\n",
-       "      <td>Arsenal</td>\n",
+       "      <th>435</th>\n",
+       "      <td>J. Rothwell</td>\n",
+       "      <td>Joe Rothwell</td>\n",
+       "      <td>AFC Bournemouth</td>\n",
+       "      <td>English Premier League (1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Elneny</td>\n",
-       "      <td>Mohamed</td>\n",
-       "      <td>Elneny</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Mohamed Elneny</td>\n",
-       "      <td>Arsenal</td>\n",
+       "      <th>436</th>\n",
+       "      <td>J. Anthony</td>\n",
+       "      <td>Jaidon Anthony</td>\n",
+       "      <td>AFC Bournemouth</td>\n",
+       "      <td>English Premier League (1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Holding</td>\n",
-       "      <td>Rob</td>\n",
-       "      <td>Holding</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Rob Holding</td>\n",
-       "      <td>Arsenal</td>\n",
+       "      <th>437</th>\n",
+       "      <td>J. Lowe</td>\n",
+       "      <td>Jamal Lowe</td>\n",
+       "      <td>AFC Bournemouth</td>\n",
+       "      <td>English Premier League (1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Partey</td>\n",
-       "      <td>Thomas</td>\n",
-       "      <td>Partey</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Thomas Partey</td>\n",
-       "      <td>Arsenal</td>\n",
+       "      <th>438</th>\n",
+       "      <td>C. Mepham</td>\n",
+       "      <td>Chris Mepham</td>\n",
+       "      <td>AFC Bournemouth</td>\n",
+       "      <td>English Premier League (1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -226,108 +245,84 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>553</th>\n",
-       "      <td>494</td>\n",
-       "      <td>Mosquera</td>\n",
-       "      <td>Yerson</td>\n",
-       "      <td>Mosquera Valdelamar</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Yerson Mosquera Valdelamar</td>\n",
-       "      <td>Wolverhampton</td>\n",
+       "      <th>337</th>\n",
+       "      <td>Daniel Podence</td>\n",
+       "      <td>Daniel Castelo Podence</td>\n",
+       "      <td>Wolverhampton Wanderers</td>\n",
+       "      <td>English Premier League (1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>554</th>\n",
-       "      <td>503</td>\n",
-       "      <td>Moutinho</td>\n",
-       "      <td>João Filipe Iria</td>\n",
-       "      <td>Santos Moutinho</td>\n",
-       "      <td>20</td>\n",
-       "      <td>3</td>\n",
-       "      <td>João Filipe Iria Santos Moutinho</td>\n",
-       "      <td>Wolverhampton</td>\n",
+       "      <th>338</th>\n",
+       "      <td>M. Kilman</td>\n",
+       "      <td>Max Kilman</td>\n",
+       "      <td>Wolverhampton Wanderers</td>\n",
+       "      <td>English Premier League (1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>555</th>\n",
-       "      <td>516</td>\n",
-       "      <td>Collins</td>\n",
-       "      <td>Nathan</td>\n",
-       "      <td>Collins</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Nathan Collins</td>\n",
-       "      <td>Wolverhampton</td>\n",
+       "      <th>339</th>\n",
+       "      <td>Hwang Hee Chan</td>\n",
+       "      <td>Hee Chan Hwang</td>\n",
+       "      <td>Wolverhampton Wanderers</td>\n",
+       "      <td>English Premier League (1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>556</th>\n",
-       "      <td>557</td>\n",
-       "      <td>Smith</td>\n",
-       "      <td>Jackson</td>\n",
-       "      <td>Smith</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1</td>\n",
+       "      <th>333</th>\n",
+       "      <td>Adama Traoré</td>\n",
+       "      <td>Adama Traoré Diarra</td>\n",
+       "      <td>Wolverhampton Wanderers</td>\n",
+       "      <td>English Premier League (1)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>358</th>\n",
+       "      <td>J. Smith</td>\n",
        "      <td>Jackson Smith</td>\n",
-       "      <td>Wolverhampton</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>557</th>\n",
-       "      <td>558</td>\n",
-       "      <td>Bueno</td>\n",
-       "      <td>Hugo</td>\n",
-       "      <td>Bueno López</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Hugo Bueno López</td>\n",
-       "      <td>Wolverhampton</td>\n",
+       "      <td>Wolverhampton Wanderers</td>\n",
+       "      <td>English Premier League (1)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>558 rows × 8 columns</p>\n",
+       "<p>620 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      id  web_name        first_name          second_name  team  element_type  \\\n",
-       "0      1    Cédric            Cédric         Alves Soares     1             2   \n",
-       "1      3     Xhaka            Granit                Xhaka     1             3   \n",
-       "2      4    Elneny           Mohamed               Elneny     1             3   \n",
-       "3      5   Holding               Rob              Holding     1             2   \n",
-       "4      6    Partey            Thomas               Partey     1             3   \n",
-       "..   ...       ...               ...                  ...   ...           ...   \n",
-       "553  494  Mosquera            Yerson  Mosquera Valdelamar    20             2   \n",
-       "554  503  Moutinho  João Filipe Iria      Santos Moutinho    20             3   \n",
-       "555  516   Collins            Nathan              Collins    20             2   \n",
-       "556  557     Smith           Jackson                Smith    20             1   \n",
-       "557  558     Bueno              Hugo          Bueno López    20             2   \n",
+       "               Name                FullName                     Club  \\\n",
+       "433    M. Tavernier        Marcus Tavernier          AFC Bournemouth   \n",
+       "435     J. Rothwell            Joe Rothwell          AFC Bournemouth   \n",
+       "436      J. Anthony          Jaidon Anthony          AFC Bournemouth   \n",
+       "437         J. Lowe              Jamal Lowe          AFC Bournemouth   \n",
+       "438       C. Mepham            Chris Mepham          AFC Bournemouth   \n",
+       "..              ...                     ...                      ...   \n",
+       "337  Daniel Podence  Daniel Castelo Podence  Wolverhampton Wanderers   \n",
+       "338       M. Kilman              Max Kilman  Wolverhampton Wanderers   \n",
+       "339  Hwang Hee Chan          Hee Chan Hwang  Wolverhampton Wanderers   \n",
+       "333    Adama Traoré     Adama Traoré Diarra  Wolverhampton Wanderers   \n",
+       "358        J. Smith           Jackson Smith  Wolverhampton Wanderers   \n",
        "\n",
-       "                            full_name      team_name  \n",
-       "0                 Cédric Alves Soares        Arsenal  \n",
-       "1                        Granit Xhaka        Arsenal  \n",
-       "2                      Mohamed Elneny        Arsenal  \n",
-       "3                         Rob Holding        Arsenal  \n",
-       "4                       Thomas Partey        Arsenal  \n",
-       "..                                ...            ...  \n",
-       "553        Yerson Mosquera Valdelamar  Wolverhampton  \n",
-       "554  João Filipe Iria Santos Moutinho  Wolverhampton  \n",
-       "555                    Nathan Collins  Wolverhampton  \n",
-       "556                     Jackson Smith  Wolverhampton  \n",
-       "557                  Hugo Bueno López  Wolverhampton  \n",
+       "                         League  \n",
+       "433  English Premier League (1)  \n",
+       "435  English Premier League (1)  \n",
+       "436  English Premier League (1)  \n",
+       "437  English Premier League (1)  \n",
+       "438  English Premier League (1)  \n",
+       "..                          ...  \n",
+       "337  English Premier League (1)  \n",
+       "338  English Premier League (1)  \n",
+       "339  English Premier League (1)  \n",
+       "333  English Premier League (1)  \n",
+       "358  English Premier League (1)  \n",
        "\n",
-       "[558 rows x 8 columns]"
+       "[620 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_fpl_df()"
+    "pl_players.to_csv('')"
    ]
   },
   {
